# pretix-exporter-bjr

./: LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg
.github/workflows/: style.yml  tests.yml
pretix_exporter_bjr/: apps.py  bjr_exporter.py  signals.py
